samples/_failures_safe/1761198479_e5b994_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_677da6d8.c: In function ‘main’:
./samples/SAFE/__tmp_677da6d8.c:143:22: error: missing terminating " character
  143 |     rows2 = read_int("\nEnter rows for matrix 2 (1-
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_677da6d8.c:143:5: error: expected expression at end of input
  143 |     rows2 = read_int("\nEnter rows for matrix 2 (1-
      |     ^~~~~
./samples/SAFE/__tmp_677da6d8.c:143:13: error: too few arguments to function ‘read_int’
  143 |     rows2 = read_int("\nEnter rows for matrix 2 (1-
      |             ^~~~~~~~
./samples/SAFE/__tmp_677da6d8.c:33:5: note: declared here
   33 | int read_int(const char* prompt, int min_val, int max_val) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_677da6d8.c:143:5: error: expected declaration or statement at end of input
  143 |     rows2 = read_int("\nEnter rows for matrix 2 (1-
      |     ^~~~~
